# Support-Ticket-Resolution-Agent-with-Multi-Step-Review-Loop-AGENTIC-AI

./: Demo_Video_Drive_Link.txt  README.md  STS.ipynb  escalation_log.csv  langgraph.json  pyproject.toml  requirements.txt
src/: CSTS.ipynb  main.py
src/StateGraph/: nodes.py  nodes_def.py  retry.py  ticket_state.py
src/core/: llm.py  prompts.py  vector_store.py
src/tests/: test_classify.py
