[project]
name = "zikra-info-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langgraph>=0.5.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
